--- a/public/style.css
+++ b/public/style.css
@@ -113,8 +113,8 @@ header{
     width: 100%;
     height: 100%;
     background: url(http://rasarestaurants.com/wp-content/uploads/2018/09/banner1.jpg) no-repeat;
-    background-size: 100% 620px;
-    
+    /* background-size: 100% 620px; */
+    background-size: 100% 100%;
     border-top: 10px solid white;
     border-bottom: 10px solid white;
     text-align: center;
