--- a/public/index.ejs
+++ b/public/index.ejs
@@ -61,13 +61,13 @@
                         <a href="" data-text="&nbsp;Home">&nbsp;Home&nbsp;</a>
                     </div>
                     <div class="menucont">
-                        <a href="" data-text="&nbsp;About">&nbsp;About&nbsp;</a>
+                        <a href="/about" data-text="&nbsp;About">&nbsp;About&nbsp;</a>
                     </div>
                     <div class="menucont">
                         <a href="/menu" data-text="&nbsp;Menu">&nbsp;Menu&nbsp;</a>
                     </div>
                     <div class="menucont" >
-                        <a href="" data-text="&nbsp;Contacts">&nbsp;Contacts&nbsp;</a>
+                        <a href="/contacts" data-text="&nbsp;Contacts">&nbsp;Contacts&nbsp;</a>
                     </div>
                 </nav>
                 <div class="description">
