--- a/public/menu/menu.css
+++ b/public/menu/menu.css
@@ -3,13 +3,14 @@ body{
     }
 .h1
 {
+    height: 50px;
     padding-top: 15px;
     font-size: 2.5em;
     font-family: sans-serif;
     font-weight: bold;
-    color: rgba(226, 186, 5, 0.897);
+    color: rgb(32, 120, 104);
     text-align: center;
-    background-color: cadetblue;
+    background-color: rgb(132, 189, 178);
     text-decoration: solid;
     text-shadow: 3px 3px  rgb(81, 136, 138);
 }
@@ -21,7 +22,7 @@ body{
   background-size: 50cm;
 }   
 .hbck{
-    background-color: cadetblue;
+    background-color:white;
     width: 100%;
     height: 80px;
 }
