--- a/public/menu/menu.css
+++ b/public/menu/menu.css
@@ -9,7 +9,7 @@ body{
     font-weight: bold;
     color: rgba(226, 186, 5, 0.897);
     text-align: center;
-    background-color: cadetblue;
+    background-color: rgb(132, 189, 178);
     text-decoration: solid;
     text-shadow: 3px 3px  rgb(81, 136, 138);
 }
