--- a/public/menu/menu.css
+++ b/public/menu/menu.css
@@ -78,7 +78,7 @@ body{
     width: 25%;
     text-align: center;
     font-size: 1.5em;
-    font-weight: 900;
+    font-weight: bold;
     text-shadow: 3px 3px 0px yellow;
     background-image: url("https://www.acouplecooks.com/wp-content/uploads/2021/02/Painkiller-Cocktail-008.jpg");
     animation: bev infinite 5s;
