--- a/public/about/about.css
+++ b/public/about/about.css
@@ -1,4 +1,99 @@
+*{
+    margin:0;
+    padding: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.banner{
+    width: 100%;
+    height: 100vh;
+    background-image:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url("Image.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: darken;
+}
+.navbar{
+    width: 85%;
+    margin: auto;
+    padding: 15px 40px;
+    text-align:left;
+    display:flex;
+    align-items: center ;
+    justify-content: space-between;
+    font-weight:lighter;
+}
 
+
+.navbar ul li{
+    list-style:none;
+    display: inline-block;
+    margin: 10px 20px;
+    position: relative;
+    padding:10px 22px
+  
+}
+.navbar ul li a{
+    text-decoration: none;
+    color:rgba(107, 145, 206, 0.993);
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 11px; 
+}
+.navbar ul li a:hover{
+    transition:4s;
+    color:blue;
+}
+.navbar ul li::after{
+    content:'';
+    height:3px;
+    width:0;
+    background: rgb(175, 181, 20);
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+}
+.navbar ul li:hover::after{
+    width:100%;
+}
+.content{
+    width:100%;
+    position:absolute;
+    top: 30%;
+    transform: translateY(-30%);
+    
+    color:rgba(209, 32, 32, 0.849);
+    padding: 10px 5px;
+}
+.content h1{
+    font-style:normal;
+    font-size: 30px;
+    margin-top: 60px;
+    text-align: left;
+}
+.content p{
+    margin: 20px auto;
+    font-weight: 100;
+    line-height: 25px;
+    font-weight: bolder;
+    color: rgb(189, 205, 18);
+    font-size:15px ;
+    font-style:inherit;
+}
+.links{
+    position:absolute;
+    top: 100%;
+    left:10%;
+    display:flex;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: center;
+}
+.links h6{
+    color:rgb(42, 218, 50);
+    font-size: 15px;
+    margin-right: 50px;
+    padding:7px 6px;
+}
+   
 
 
 
