--- a/public/index.ejs
+++ b/public/index.ejs
@@ -64,7 +64,9 @@
                         <a href="/about" data-text="&nbsp;About">&nbsp;About&nbsp;</a>
                     </div>
                     <div class="menucont">
-                        <a href="/menu" data-text="&nbsp;Menu">&nbsp;Menu&nbsp;</a>
+                        <a href="/menu" data-text="&nbsp;Menu">&nbsp;Menu&nbsp;
+                            
+                        </a>
                     </div>
                     <div class="menucont" >
                         <a href="/contacts" data-text="&nbsp;Contacts">&nbsp;Contacts&nbsp;</a>
