--- a/public/about/about.css
+++ b/public/about/about.css
@@ -6,7 +6,7 @@
 .banner{
     width: 100%;
     height: 100vh;
-    background-image:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url("Image.jpeg");
+    background-image:linear-gradient(rgba(0,0,0,0.6),rgba(0, 0, 0, 0.6)),url("https://images.pexels.com/photos/1640773/pexels-photo-1640773.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
     background-size: cover;
     background-position: center;
     background-blend-mode: darken;
