--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,31 @@ body{
     margin: 0;
     background-color:rgb(132, 189, 178);
 }
+
+
+video {
+    object-fit: fill;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    z-index: 1;
+  }
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 2;
+    /* background: rgba(0,0,0,0.6); */
+  }
+
+
+
+
 header{
+    
     display: flex;
     position: relative;
     width: 100%;
@@ -110,9 +134,10 @@ header{
     width: 100%;
 }
 .bckimg1{
+    
     width: 100%;
     height: 100%;
-    background: url(http://rasarestaurants.com/wp-content/uploads/2018/09/banner1.jpg) no-repeat;
+    /* background: url(http://rasarestaurants.com/wp-content/uploads/2018/09/banner1.jpg) no-repeat; */
     /* background-size: 100% 620px; */
     background-size: 125% 125%;
 
