--- a/public/index.ejs
+++ b/public/index.ejs
@@ -79,7 +79,7 @@
                             </a>
                         </div>
                         <div class="menucont" >
-                            <a href="/contacts" data-text="&nbsp;Contacts">&nbsp;Contacts&nbsp;</a>
+                            <a href="/contact" data-text="&nbsp;Contacts">&nbsp;Contacts&nbsp;</a>
                         </div>
                     </nav>
                     <div class="description">
