--- a/public/index.ejs
+++ b/public/index.ejs
@@ -7,7 +7,7 @@
 <body>
     
     <header>
-        <div class="overlay">
+        <div class="overlay1">
             <div class="headcontainer">
                 <div class="logo">
                     <div class="logoname">
@@ -65,7 +65,7 @@
                 <video autoplay muted loop>
                     <source src="Pexels Videos 3972.mp4" type="video/mp4" />
                 </video>
-                <div class="overlay">
+                <div class="overlay2">
                     <nav>
                         <div class="menucont">
                             <a href="" data-text="&nbsp;Home">&nbsp;Home&nbsp;</a>
