--- a/public/style.css
+++ b/public/style.css
@@ -12,9 +12,18 @@ video {
     left: 0;
     z-index: 1;
   }
-  .overlay {
+  .overlay1{
     position: absolute;
     top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 2;
+    /* background: rgba(0,0,0,0.6); */
+  }
+  .overlay2 {
+    position: absolute;
+    top: 10px;
     left: 0;
     bottom: 0;
     right: 0;
