--- a/public/about/about.css
+++ b/public/about/about.css
@@ -6,7 +6,7 @@
 .banner{
     width: 100%;
     height: 100vh;
-    background-image:linear-gradient(rgba(0,0,0,0.6),rgba(0, 0, 0, 0.6)),url("https://images.pexels.com/photos/1640773/pexels-photo-1640773.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+    background-image:linear-gradient(rgba(0,0,0,0.2),rgba(0, 0, 0, 0.2)),url("https://im1.dineout.co.in/images/uploads/restaurant/sharpen/1/r/g/p104487-164732096162301f813700c.jpg?tr=tr:n-large");
     background-size: cover;
     background-position: center;
     background-blend-mode: darken;
@@ -60,7 +60,7 @@
     top: 30%;
     transform: translateY(-30%);
     
-    color:rgba(209, 32, 32, 0.849);
+    color:rgba(50, 228, 10, 0.849);
     padding: 10px 5px;
 }
 .content h1{
@@ -74,8 +74,8 @@
     font-weight: 100;
     line-height: 25px;
     font-weight: bolder;
-    color: rgb(189, 205, 18);
-    font-size:15px ;
+    color: rgba(218, 218, 152, 0.914);
+    font-size:19px ;
     font-style:inherit;
 }
 .links{
@@ -88,7 +88,7 @@
     align-items: center;
 }
 .links h6{
-    color:rgb(42, 218, 50);
+    color:rgb(160, 225, 225)
     font-size: 15px;
     margin-right: 50px;
     padding:7px 6px;
