--- a/public/about/about.css
+++ b/public/about/about.css
@@ -5,7 +5,7 @@
 }
 .banner{
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-image:linear-gradient(rgba(0,0,0,0.2),rgba(0, 0, 0, 0.2)),url("https://im1.dineout.co.in/images/uploads/restaurant/sharpen/1/r/g/p104487-164732096162301f813700c.jpg?tr=tr:n-large");
     background-size: cover;
     background-position: center;
@@ -60,44 +60,46 @@
     top: 30%;
     transform: translateY(-30%);
     
-<<<<<<< HEAD
+
     color:rgba(50, 228, 10, 0.849);
     padding: 10px 5px;
-=======
-    color:rgba(209, 32, 32, 0.849);
+
+  /*  color:rgba(209, 32, 32, 0.849);*/
     /* padding: 10px 5px; */
-    
->>>>>>> 530434e9afa3b26130c4109ba535afde1fa494b6
 }
-.content h1{
+
+.content{
     font-style:normal;
-    font-size: 30px;
-    margin-top: 60px;
+    /* font-size: 30px;
+    margin-top: 60px; */
     text-align: left;
 }
-.content p{
+
+
+p{
     margin: 20px auto;
     font-weight: 100;
     line-height: 25px;
     font-weight: bolder;
-    color: rgba(218, 218, 152, 0.914);
-    font-size:19px ;
+    color: rgba(230, 230, 187, 0.914);
+    font-size:1.5em ;
     font-style:inherit;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .links{
     position:absolute;
-    top: 100%;
-    left:10%;
-    display:flex;
+    /* top: 100%;
+    left:10%; */
+    /* display:flex;
     flex-wrap: nowrap;
-    justify-content: flex-start;
+    justify-content: flex-start; */
     align-items: center;
 }
 .links h6{
     color:rgb(160, 225, 225)
-    font-size: 15px;
-    margin-right: 50px;
-    padding:7px 6px;
+    /* font-size: 15px; */
+    /* margin-right: 50px; */
+    /* padding:7px 6px; */
 }
    
 
