--- a/public/about/about.css
+++ b/public/about/about.css
@@ -6,7 +6,7 @@
 .banner{
     width: 100%;
     height: 100%;
-    background-image:linear-gradient(rgba(0,0,0,0.2),rgba(0, 0, 0, 0.2)),url("https://im1.dineout.co.in/images/uploads/restaurant/sharpen/1/r/g/p104487-164732096162301f813700c.jpg?tr=tr:n-large");
+    background-image:linear-gradient(rgba(0,0,0,0.8),rgba(0, 0, 0, 0.7)),url("https://im1.dineout.co.in/images/uploads/restaurant/sharpen/1/s/s/p104487-164732083062301efee1942.jpg?tr=tr:n-large");
     background-size: cover;
     background-position: center;
     background-blend-mode: darken;
@@ -74,17 +74,21 @@
     margin-top: 60px; */
     text-align: left;
 }
+h1{
+     color: aqua;
+     align-items: margin;
+}
 
 
 p{
     margin: 20px auto;
     font-weight: 100;
-    line-height: 25px;
-    font-weight: bolder;
-    color: rgba(230, 230, 187, 0.914);
-    font-size:1.5em ;
-    font-style:inherit;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    line-height: 27px;
+    font-weight: lighter;
+    color: rgba(189, 132, 132, 0.914);
+    font-size:25px ;
+    font-style:initial;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-seri
 }
 .links{
     position:absolute;
