--- a/public/menu/menu.css
+++ b/public/menu/menu.css
@@ -20,7 +20,7 @@ body{
     height: 19.7cm;
   /* background: no-repeat url("https://ichef.bbci.co.uk/news/976/cpsprodpb/107A9/production/_98779476_grind3.jpg"); */
   background-color: rgb(41, 38, 38);
-  background-size: 50cm;
+  /* background-size: 50cm; */
 }   
 .hbck{
     background-color:white;
@@ -28,22 +28,7 @@ body{
     height: 80px;
 }
 .Ap{
-    padding-top: 2cm;
-    position: relative;
-    float: left;
-    height: 99%;
-    width: 25%;
-    text-align: center;
-    font-size: 1.5em;
-    font-weight: bold;
-    text-shadow: 3px 3px 0px yellow;
-    background-image: url("https://merriam-webster.com/assets/mw/images/gallery/gal-wap-slideshow-slide/canapes%20on%20tray-8975-4d6bf391c6cea60111e5ec8e5a681902@1x.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    
-}
-.mc{
-    padding-top: 2cm;
+    /* padding-top: 2cm; */
     position: relative;
     float: left;
     height: 99%;
@@ -51,12 +36,35 @@ body{
     text-align: center;
     font-size: 2em;
     font-weight: bold;
-    text-shadow: 2px 2px 0px yellow;
+    /* text-shadow: 3px 3px 0px yellow; */
+    background-image: url("https://merriam-webster.com/assets/mw/images/gallery/gal-wap-slideshow-slide/canapes%20on%20tray-8975-4d6bf391c6cea60111e5ec8e5a681902@1x.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+}
+.Ap ul{
+    list-style: none;
+    
+}
+.mc{
+    /* padding-top: 2cm; */
+    position: relative;
+    float: left;
+    height: 99%;
+    width: 25%;
+    text-align: center;
+    font-size: 2em;
+    font-weight: bold;
+    /* text-shadow: 2px 2px 0px yellow; */
     background-image: url("https://www.licious.in/blog/wp-content/uploads/2020/10/butter-chicken-.jpg");
     
 }
+.mc ul{
+    list-style: none;
+    
+}
 .des{
-    padding-top: 2cm;
+    /* padding-top: 2cm; */
     position: relative;
     float: left;
     height: 99%;
@@ -64,29 +72,39 @@ body{
     text-align: center;
     font-size: 2em;
     font-weight: bold;
-     text-shadow: 3px 3px 0px yellow; 
+     /* text-shadow: 3px 3px 0px yellow;  */
     background-image: url("https://thekitchencommunity.org/wp-content/uploads/2021/03/Donut-768x512.jpg");
    
     background-size: cover;
     background-repeat: no-repeat;
     
 }
+.des ul{
+    list-style: none;
+    
+}
 .bev{
-    padding-top: 2cm;
+    /* padding-top: 2cm; */
     position: relative;
     float: left;
     height: 99%;
     width: 25%;
     text-align: center;
+    border-right: 20px;
     font-size: 2em;
     font-weight: bold;
-    text-shadow: 3px 3px 0px yellow;
+    /* text-shadow: 3px 3px 0px yellow; */
     background-image: url("https://www.acouplecooks.com/wp-content/uploads/2021/02/Painkiller-Cocktail-008.jpg");
-    animation: bev infinite 5s;
-    background-position: left;
+    /* animation: bev infinite 5s;
+    background-position: left; */
 } 
 
-@keyframes bev{
+.bev ul{
+    list-style: none;
+    
+}
+
+/* @keyframes bev{
     0%{
         background-position: left;
     }
@@ -96,7 +114,7 @@ body{
     100%{
         background-position: left;
     }
-}
+} */
 
 .crsr{
     cursor: pointer;
