--- a/public/about/about.css
+++ b/public/about/about.css
@@ -1,79 +1,62 @@
-*{
+body{
     margin:0;
     padding: 0;
+    background-color:rgb(132, 189, 178);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-.banner{
+header{
+    position: relative;
+    width: 100%;
+    height: 80px;
+}
+.headcontainer{
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    display: inline;
+}
+
+.logo{
+    position: relative;
+    color: rgb(32, 120, 104);
+    font-family: sans-serif;
+    text-align: center;
+    float: left;
+    font-size: 1.8em;
+    font-weight: bold;
+    position: relative;
+    height: 100%;
+    width: 20%;
+}
+.logoname{
+    position: absolute;
+    top: 23px;
+}
+.bckcontainer{
+    position: relative;
+    height: 620px;
+    width: 100%;
+}
+.bckimg1{
+    
+    width: 100%;
+    height: 100%;
+    /* background: url(https://im1.dineout.co.in/images/uploads/restaurant/sharpen/1/s/s/p104487-164732083062301efee1942.jpg?tr=tr:n-large); */
+    /* background-size: 100% 100%; */
+    background-image:linear-gradient(rgba(0,0,0,0.8),rgba(0, 0, 0, 0.7)),url("https://im1.dineout.co.in/images/uploads/restaurant/sharpen/1/s/s/p104487-164732083062301efee1942.jpg?tr=tr:n-large");
+    border-top: 10px solid white;
+    border-bottom: 10px solid white;
+    text-align: center;
+}
+/* .banner{
     width: 100%;
     height: 100%;
     background-image:linear-gradient(rgba(0,0,0,0.8),rgba(0, 0, 0, 0.7)),url("https://im1.dineout.co.in/images/uploads/restaurant/sharpen/1/s/s/p104487-164732083062301efee1942.jpg?tr=tr:n-large");
     background-size: cover;
     background-position: center;
     background-blend-mode: darken;
-}
-.navbar{
-    width: 85%;
-    margin: auto;
-    padding: 15px 40px;
-    text-align:left;
-    display:flex;
-    align-items: center ;
-    justify-content: space-between;
-    font-weight:lighter;
-}
+} */
 
-
-.navbar ul li{
-    list-style:none;
-    display: inline-block;
-    margin: 10px 20px;
-    position: relative;
-    padding:10px 22px
-  
-}
-.navbar ul li a{
-    text-decoration: none;
-    color:rgba(107, 145, 206, 0.993);
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 11px; 
-}
-.navbar ul li a:hover{
-    transition:4s;
-    color:blue;
-}
-.navbar ul li::after{
-    content:'';
-    height:3px;
-    width:0;
-    background: rgb(175, 181, 20);
-    position: absolute;
-    left: 0;
-    bottom: -10px;
-}
-.navbar ul li:hover::after{
-    width:100%;
-}
-.content{
-    width:100%;
-    position:absolute;
-    top: 30%;
-    transform: translateY(-30%);
-    
-
-    color:rgba(50, 228, 10, 0.849);
-    padding: 10px 5px;
-
-  /*  color:rgba(209, 32, 32, 0.849);*/
-    /* padding: 10px 5px; */
-}
-
-.content{
-    font-style:normal;
-    /* font-size: 30px;
-    margin-top: 60px; */
-    text-align: left;
-}
 h1{
      color: rgb(172, 248, 118);
      align-items: margin;
@@ -93,9 +76,9 @@ p{
     position:absolute;
     /* top: 100%;
     left:10%; */
-    /* display:flex;
+    display:flex;
     flex-wrap: nowrap;
-    justify-content: flex-start; */
+    justify-content: flex-start;
     align-items:center;
 }
 .links h3{
