--- a/public/about/about.css
+++ b/public/about/about.css
@@ -42,12 +42,28 @@ header{
     width: 100%;
     height: 100%;
     /* background: url(https://im1.dineout.co.in/images/uploads/restaurant/sharpen/1/s/s/p104487-164732083062301efee1942.jpg?tr=tr:n-large); */
-    /* background-size: 100% 100%; */
+    background-size: 125% 100%;
     background-image:linear-gradient(rgba(0,0,0,0.8),rgba(0, 0, 0, 0.7)),url("https://im1.dineout.co.in/images/uploads/restaurant/sharpen/1/s/s/p104487-164732083062301efee1942.jpg?tr=tr:n-large");
     border-top: 10px solid white;
+    background-position: left;
+    animation: bck infinite 10s;
     border-bottom: 10px solid white;
     text-align: center;
 }
+
+@keyframes bck{
+    0%{
+        background-position: left;
+    }
+    50%{
+        background-position: right;
+    }
+    100%{
+        background-position: left;
+    }
+}
+
+
 /* .banner{
     width: 100%;
     height: 100%;
