--- a/public/menu/menu.css
+++ b/public/menu/menu.css
@@ -1,5 +1,6 @@
 body{
     margin:0;
+    background-color:  rgb(132, 189, 178) ;
     }
 .h1
 {
@@ -17,15 +18,17 @@ body{
 .bckgrnd
 {
     margin: 0;
-    height: 19.7cm;
+    height: 17.9cm;
   background:url("https://images-ext-2.discordapp.net/external/nNea18QNuF4ZfIofVy9dP29cGfUcEWC3a6-88_2BAfo/%3Fauto%3Dcompress%26cs%3Dtinysrgb%26w%3D1260%26h%3D750%26dpr%3D1/https/images.pexels.com/photos/1860200/pexels-photo-1860200.jpeg?width=1005&height=670");
   background-color: rgb(41, 38, 38);
+  border-bottom: solid 10px white;
+  background-size: cover;
   /* background-size: 50cm; */
 }   
 .hbck{
     background-color:white;
     width: 100%;
-    height: 80px;
+    height: 75px;
 }
 .Ap{
     /* padding-top: 2cm; */
