--- a/public/menu/menu.css
+++ b/public/menu/menu.css
@@ -18,8 +18,8 @@ body{
 .bckgrnd
 {
     margin: 0;
-    height: 19cm;
-    background-image:linear-gradient(rgba(0,0,0,0.2),rgba(0, 0, 0, 0.3)),url("https://images-ext-2.discordapp.net/external/nNea18QNuF4ZfIofVy9dP29cGfUcEWC3a6-88_2BAfo/%3Fauto%3Dcompress%26cs%3Dtinysrgb%26w%3D1260%26h%3D750%26dpr%3D1/https/images.pexels.com/photos/1860200/pexels-photo-1860200.jpeg?width=1005&height=670");
+    height: 20cm;
+    background-image:linear-gradient(rgba(0,0,0,0.4),rgba(0, 0, 0, 0.5)),url("https://images-ext-2.discordapp.net/external/nNea18QNuF4ZfIofVy9dP29cGfUcEWC3a6-88_2BAfo/%3Fauto%3Dcompress%26cs%3Dtinysrgb%26w%3D1260%26h%3D750%26dpr%3D1/https/images.pexels.com/photos/1860200/pexels-photo-1860200.jpeg?width=1005&height=670");
   /* background:url("https://images-ext-2.discordapp.net/external/nNea18QNuF4ZfIofVy9dP29cGfUcEWC3a6-88_2BAfo/%3Fauto%3Dcompress%26cs%3Dtinysrgb%26w%3D1260%26h%3D750%26dpr%3D1/https/images.pexels.com/photos/1860200/pexels-photo-1860200.jpeg?width=1005&height=670"); */
   background-color: rgb(41, 38, 38);
   border-bottom: solid 10px white;
@@ -33,6 +33,7 @@ body{
 }
 .Ap{
     /* padding-top: 2cm; */
+    /* text-shadow: 1px 1px rgb(106, 255, 0); */
     position: relative;
     float: left;
     height: 99%;
