--- a/public/menu/menulog.css
+++ b/public/menu/menulog.css
@@ -1,5 +1,6 @@
 body{
     margin:0;
+    height: 100vh;
     background: rgb(41, 38, 38);
     }
 .h1
@@ -18,7 +19,8 @@ body{
 .bckgrnd
 {
     margin: 0;
-    height: 17.6cm;
+    /* height: 17.6cm; */
+    height: 100%;
   /* background: no-repeat url("https://ichef.bbci.co.uk/news/976/cpsprodpb/107A9/production/_98779476_grind3.jpg"); */
   /* background: rgb(41, 38, 38); */
   background-size: 50cm;
@@ -30,8 +32,8 @@ body{
 }
 
 .prodisplay{
-    display: flex;
-    justify-content: left;
+    display: flexbox;
+    /* justify-content: left; */
     margin: 0;
     border: 0;
     height: 100%;
@@ -52,17 +54,19 @@ body{
 .procont{
     
     border-top: 10px;
-    height: 60px;
-    width: 50px;
+    height: 80px;
+    width: 99px;
     background-color: aqua;
+    display: inline-block;
+    margin: 10px;
 }
 
-.marg{
+/* .marg{
     height: auto;
-    width: 100%;
+    width: 100vh;
     
     display: flex;
     margin-top: 10px;
     margin-left: 10px;
     margin-right: 10px;
-}
+} */
