--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
 
 @font-face {
     font-family: mathline;
-    src: url('Mathline\ TTF.ttf');
+    src: url('Mathline.ttf');
 }
 @font-face {
     font-family: harilly;
